static/css/main.css
/* ... */
@supports (display:grid) {
  @media screen and (min-width: 768px) {
    .content-permalink {
      display: grid;
      grid-gap: 30px;
      grid-template-columns: 1fr 330px;
      grid-template-areas: "title title" "image sidebar" "comments sidebar" "post-comment sidebar";
    }

    .content-permalink > * {
      margin: 0 !important;
    }

    .content-permalink::after {
      content: none;
    }

    .content-permalink > .permalink-sidebar,
    .content-permalink > .image-content,
    .content-permalink > .image-comments,
    .content-permalink > .image-comment-form {
      width: auto;
    }

    .content-permalink > .image-title        { grid-area: title; }
    .content-permalink > .image-content      { grid-area: image; }
    .content-permalink > .permalink-sidebar  { grid-area: sidebar; }
    .content-permalink > .image-comments     { grid-area: comments; }
    .content-permalink > .image-comment-form { grid-area: post-comment; }
  }
}

.content-permalink .image-title h1 {
  font-size: 48px;
}

.image-content {
  clear: both;
  padding: 15px;
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
}

@media screen and (min-width: 768px) {
  .image-content {
    padding: 15px 40px 40px;
  }
}


.image-content img.unsized {
  max-width: 100%;
  height: auto;
}

.image-content .image-title {
  padding: 0;
}

.image-content .image-interactions {
  clear: both;
}

.image-content .image-interactions .save-this  {
  margin-right: 5px;
  float: right;
  position: relative;
}

.image-content .image-interactions .save-this .save-this-link:focus  {
  outline: none;
}

.image-content .image-interactions .like-this {
  width: 59px;
  float: right;
}

.image-content .image-interactions .like-this .like-button:focus {
  outline: none;
}

.image-content .image-interactions .save-this-shake-selector {
  position: absolute;
  z-index: 1;
  width: 170px;
  min-height: 30px;
  right: 0;
  top: 0;
  background-color: #ff9d00;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  padding: 7px 0;
}

.image-content .image-interactions .save-this-shake-selector-loading {
  min-height: 100px;
}

.image-content .image-interactions .save-this-shake-selector-loading::after {
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
  border-radius: 50%;
  border: 5px solid rgba(255, 255, 255, 0.2);
  border-left-color: #ffffff;
  box-sizing: border-box;
  content: '';
  display: block;
  height: 50px;
  margin: 1em auto;
  -ms-transform: translateZ(0);
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  width: 50px;
}

@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
.image-content .image-interactions .save-this-shake-selector ul {
  clear: both;
  margin: 0;
  padding: 0;
  list-style: none;
}

.image-content .image-interactions .save-this-shake-selector a {
  padding: 7px 7px;
  margin: 0 7px;
  color: #fff;
  font-weight:bold;
  display: block;
  text-decoration: none;
  text-shadow: 1px 1px 1px #e48c00;
  word-wrap: break-word;
  overflow-wrap: break-word;
}

.image-content .image-interactions .save-this-shake-selector a:hover {
  background-color: #ffb338;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.image-content .image-interactions .save-this-shake-selector .close {
  display: block;
  cursor: pointer;
  position: absolute;
  top: 10px;
  right: 10px;
  color: #fff;
  transform: rotate(180deg);
}

.image-content .image-interactions .save-this-shake-selector .close:hover,
.image-content .image-interactions .save-this-shake-selector .close:focus {
  opacity: .66;
}

.image-content .image-interactions .save-this-shake-selector .close::before {
  content: '';
  position: absolute;
  top: -19px;
  right: -15px;
  bottom: -11px;
  left: -15px;
}

.permalink-sidebar {
  position: relative;
  padding-top: 15px;
  padding-right: 30px;
}


.permalink-sidebar a {
  color: #FF0080;
  font-weight: bold;
  text-decoration: none;
}

.sidebar-stats {
  margin-top: 30px;
  background-color: #e5fcff;
  padding: 5px 10px 0 10px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  font-size: 14px;
  font-weight: bold;
  display: flex;
  flex-wrap: wrap;
}

.sidebar-stats > * {
  flex: 1;
}


.sidebar-stats-block {
}

.sidebar-stats-block .tab {
  padding: 10px 10px 10px 10px;
  display: block;
}

.sidebar-stats-views {
  color: #4b4b4b;
}

.sidebar-stats-views .tab {
  padding-right: 10px;
}

.sidebar-stats-saves {
  color: #ff8400;
  text-align: left;
}

.sidebar-stats-saves .tab {
}

.sidebar-stats-hearts {
  color: #ff0000;
}

.sidebar-stats-hearts .tab {
  padding-right: 10px;
}

.sidebar-stats .selected .tab {
  background-color: #fff;
  -webkit-border-top-left-radius: 10px;
  -webkit-border-top-right-radius: 10px;
  -moz-border-radius-topleft: 10px;
  -moz-border-radius-topright: 10px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.sidebar-stats .enable-cursor {
  cursor: pointer;
}

.sidebar-stats-content {
  display: none;
  clear: both;
  margin-bottom: 15px;
  background-color: #fff;
  -webkit-border-bottom-right-radius: 10px;
  -webkit-border-bottom-left-radius: 10px;
  -moz-border-radius-bottomright: 10px;
  -moz-border-radius-bottomleft: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  padding: 15px;
  flex-basis: 100%;
}

.sidebar-stats-content .user-action {
  clear: both;
  margin-bottom: 5px;
  display: flex;
}

.sidebar-stats-content .icon {
  width: 20px;
  height: 20px;
  display: block;
  margin-right: 5px;
}
/* ... */

